# FloatingCountdown

./: .gitignore  AGENTS.md  README.md  index.html  main.js  mini.css  mini.html  mini.js  package-lock.json  package.json  preload.js  renderer.js  styles.css
native/qt-qml/: CMakeLists.txt  README.md
native/qt-qml/qml/: Main.qml
native/qt-qml/scripts/: package-macos-arm64.sh  package-windows-arm64.ps1  package-windows-x64.ps1
native/qt-qml/sfx/: self_extract.cpp
native/qt-qml/src/: main.cpp
scripts/: package-macos.js  package-windows.js
